# Page_Rank

./: .gitignore  CLAUDE.md  output.json  readme.md
Backend/graph_link/: CLAUDE.md  CMakeLists.txt  pagerank_engine.cpp  pyproject.toml  setup.py
Backend/graph_link/bindings/: bindings.cpp  bindings_kernels.cu
Backend/graph_link/graph_link/: __init__.py  cluster_permute_csr.py  pbr_matrix_triton.py  pbr_registry.py
Backend/graph_link/kernels/: kernels.hpp  pbr_kernel.cu  pbr_kernels.hpp  ppr_kernel.cu  ppr_kernels.hpp
Backend/graph_link/pbr_matrix/: pbr_matrix.cpp  pbr_matrix.hpp
Backend/server/: README.md  app.py  requirements.txt
Frontend/: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  test_pipeline.py  tsconfig.json  vite.config.ts
Frontend/public/samples/: karate-edgelist.csv  small-coo.csv  tiny-adjacency.csv
Frontend/src/: App.tsx  main.tsx  vite-env.d.ts
Frontend/src/components/configure/: AlphaSlider.tsx  ConfigPanel.tsx  IterationInput.tsx  SeedNodePicker.tsx  TopXInput.tsx
Frontend/src/components/layout/: AppShell.tsx  ThemeToggle.tsx
Frontend/src/components/results/: ExportMenu.tsx  NetworkGraph.tsx  RanksTable.tsx  TopXCards.tsx
Frontend/src/components/ui/: button.tsx  command.tsx  dialog.tsx  input.tsx  popover.tsx  radio-group.tsx  switch.tsx  tabs.tsx  toast.tsx  toaster.tsx  use-toast.ts
Frontend/src/components/upload/: ColumnMapper.tsx  FileDropzone.tsx  FormatPicker.tsx  SampleGraphPicker.tsx
Frontend/src/lib/: utils.ts
Frontend/src/lib/csv/: index.ts  parseAdjacency.ts  parseCOO.ts  parseCustom.ts  parseEdgeList.ts
Frontend/src/lib/export/: toCSV.ts  toJSON.ts
Frontend/src/lib/ppr/: adapter.ts  computeMockPersonalizedPageRank.ts  degrees.ts  types.ts
Frontend/src/pages/: ConfigurePage.tsx  LearnPage.tsx  ResultsPage.tsx  UploadPage.tsx
Frontend/src/store/: useAppStore.ts
Frontend/src/styles/: globals.css
Frontend/src/test/components/: AlphaSlider.test.tsx  FileDropzone.test.tsx  FormatPicker.test.tsx  SeedNodePicker.test.tsx
Tests/: CLAUDE.md  benchmark_spdmm.py  matrices.py  plot_benchmark.py  test_benchmark.py  test_ppr_accuracy.py  test_spmm.py  wiki_ppr.py
jobs/: build_test_pbr_csr_20260609.sh  serve_ppr_20260609.sh  wiki_ppr_20260609.sh  wiki_ppr_en_20260609.sh
(+12 files in other folders)
