[build-system]
requires = [
    'setuptools>=64',
    'pybind11',
    'torch',
    'numpy',
    'scipy',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'graph_link'
version = '0.0.1'
description = 'PyTorch extension graph_link'
dependencies = [
    'numpy',
    'scipy',
    'torch',
]
requires-python = '>=3.12'

[project.optional-dependencies]
test = ['pytest', 'coverage', 'pytest-cov']